syntax = "proto3";

package sfxproto;

enum MetricType {
    // Numerical: Periodic, instantaneous measurement of some state.
    GAUGE = 0;

    // Numerical: Count of occurrences. Generally non-negative integers.
    COUNTER = 1;

    // String: Used for non-continuous quantities (that is, measurements where
    // there is a fixed set of meaningful values). This is essentially a special
    // case of gauge.
    ENUM = 2;

    // Tracks a value that increases over time, where only the difference is
    // important.
    CUMULATIVE_COUNTER =3;
}

message Datum {
  string strValue    = 1;
  double doubleValue = 2;
  int64  intValue    = 3;
}

message Dimension {
  string key   = 1;
  string value = 2;
}

message DataPoint {
  // source, field 1, was deprecated, so start at field 2
  string             metric     = 2;
  int64              timestamp  = 3;
  Datum              value      = 4;
  MetricType         metricType = 5;
  repeated Dimension dimensions = 6;
}

message DataPointUploadMessage {
  repeated DataPoint datapoints = 1;
}
